index.css
* {
    box-sizing: border-box;
}

html, body {
    margin: 0;
    padding: 0;
    font-family: "Plus Jakarta Sans", sans-serif;
    background: #080F17;
    color: #D6DDE6;
    display: flex;
    flex-direction: column;
    height: 100%;
}

body {
    font-size: 0.8rem;
}

h1 {
    font-size: 1rem;
}

h1, h2, h3, h4, p {
    margin: 0;
}

h3 {
    font-size: 1.5rem;
    margin-bottom: 1em;
}

h4 {
    font-size: 1.2rem;
}

a {
    text-decoration: none;
    color: #D6DDE6;
}

p {
    font-weight: 200;
    font-size: 1rem;
    line-height: 2em;
}

nav > a {
    text-decoration: none;
}

.nav-link:hover {
    background-color: #D6DDE6;
    color: #080F17; 
}

.inline-link {
    text-decoration: underline;
}

.inline-link:hover {
    color: #99951580;
}

ul {
    margin: 0 1em;
    margin-top: 1em;
    padding: 1em;
}

ul > li {
    font-size: 1rem;
    margin-bottom: 0.2em;
    line-height: 1.5em;
}

main {
    display: flex;
    flex-direction: column;
    margin-top: 2em;
    flex: 1;
}

section {
    padding: 1em 0;
}

.container {
    padding: 1.8em;
}

.divider {
    border-bottom: 1px solid #FFFFFF20;
}

.nav-gap {
    margin-top: 8em;
}

.highlight {
    font-weight: 700;
    background-color: #999515;
    padding: 0.2em;
}

.bold {
    font-weight: 700;
}

.current {
    text-transform: lowercase;
    font-size: 0.8em;
    font-weight: 600;
    color: #999515;
}

/* HEADER */

header {
    position: fixed;
    top: 0;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    min-height: 50px;
    background-color: #080F17;
}

div.header-left {
    display: flex;
    align-items: center;
    gap: 1em;
}

div.header-left > .icon-img {
    width: 50px;
    margin: 0;
}

nav {
    font-size: 1rem;
    display: none;
    align-items: center;
    gap: 2em;
}

.nav-icon {
    display: block;
    cursor: pointer;
    height: 20px;
    width: 20px;
}

.burger {
    display: inline-block;
}

.border {
    border: 2px solid #FFFFFF20;
}

.active-link {
    font-weight: bold;
    text-decoration: underline;
}

.card-holder {
    display: grid;
    gap: 1.5em;
    grid-auto-rows: 1fr;
    align-items: stretch;
    flex-direction: column;
}

.card-holder > a {
    height: 100%;    
}

/* SIDEBAR (MOBILE) */

div.sidebar {
    position: fixed;
    top: 0;
    right: -60vw;
    width: 60vw;
    height: 100%;
    z-index: 1000;
    display: flex;
    flex-direction: column;
    background-color: #D6DDE6;
    transition: right 0.3s ease-in-out;
}

div.sidebar.active {
    right: 0;
}

div.sidebar > nav {
    font-size: 1.5rem;
    margin-top: 1rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.side-link {
    display: block;
    color: #080F17;
    text-decoration: none;
}

.side-link:hover {
    background-color: #080F17;
    color: #D6DDE6;
}

div.side-header {
    border-bottom: 1px solid #080F17;
    height: 50px;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 1em;
}

.x {
    color: #080F17;
}

/* TITLE SECTION */
section.title {
    text-align: center;
}

section.title > h2 {
    font-size: 2rem;
}

section.title > p {
    font-size: 0.8rem;
    letter-spacing: 0.5px;
    font-weight: 200;
}

/* PROJECT SECTION */

img.project-img {
    aspect-ratio: 16 / 9;
    width: 100%;
    object-fit: cover;
    border-radius: 8px;
}

div.tags {
    display: flex;
    flex-wrap: wrap;
    gap: 0.6em;
}

div.tags > p {
    font-size: 0.7rem;
    line-height: 1.2em;
    padding: 0.5em 0.8em;
    border: 1px solid #D6DDE6;
    border-radius: 20px;
    margin: 0;
}

div.tags > p.main-tag {
    background-color: #D6DDE6;
    color: #080F17;
    font-weight: 600;
}

div.project {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
    gap: 0.7em;
    border-radius: 15px;
}


div.project > .details,
div.project > .project-top {
    display: flex;
    flex-direction: column;
    gap: 1em
} 

div.project:hover,
div.rec:hover {
    border: 1px solid #999515;
    box-shadow: 3px 3px #999515;
}

div.tool-div {
    display: flex;
    align-items: center;
    gap: 0.5em;
}

p.tool {
    font-style: italic;
    font-size: 0.8rem;
}


/* REC SECTION */

.recs {
    display: grid;
    gap: 1.5em;
    align-items: stretch;
    flex-direction: column;
}

div.rec {
    background-color: #FFFFFF04;
    border-radius: 16px;
}

div.rec-top {
    display: flex;
    align-items: center;
    gap: 0.5em;
    margin-bottom: 1em;
}

div.rec-title {
    display: flex;
    flex-direction: column;
    gap: 0.5em;
    margin-bottom: 0.5em;
}

div.rec-title > h4 {
    font-size: 0.8rem;
    margin: 0;
}

div.rec-title > p {
    font-size: 0.8rem;
    line-height: 1em;
    font-style: italic;
}

div.rec > p {
    margin-left: 1em;
    padding-left: 1em;
    border-left: 2px solid #FFFFFF20;
    font-size: 0.8rem;
}


.user-icon {
    height: 40px;
    width: 40px;
    margin-bottom: 0.5em;
}

/* MINI ABOUT */
.icon-img {
    width: 100px;
    margin-bottom: 0.8em;
}

section.mini-about > p {
    line-height: 2em;
    margin-bottom: 2em;
}

.link-btn {
    border: 2px solid #D6DDE6;
    color: #D6DDE6;
    border-radius: 30px;
    font-size: 1rem;
    font-weight: 600;
    padding: 1em 1.5em;
}

.link-btn:hover {
    background-color: #D6DDE6;
    color: #080F17;
}

/* ABOUT PAGE */
div.link-btn-div {
    display: flex;
    flex-wrap: wrap;
    gap: 1em;
    margin: 1em 0;
}

/* FOOTER */

footer {
    width: 100%;
    border-top: 1px solid #FFFFFF20;
    background-color: #080F17;
    margin-top: 3em;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

div.footer-links {
    display: flex;
    gap: 1em;
    margin-bottom: 1em;
}

div.footer-links > a {
    font-size: 1rem;
}

footer > p {
    font-size: 0.8rem;
}

@media (min-width: 768px) {
    nav {
        display: flex;
    }
    
    .burger {
        display: none;
    }
    
    div.sidebar {
        right: -40vw;
        width: 40vw    
    }
    
    h1 {
        font-size: 1.5rem;
    }
    
    main {
        margin: 3em auto;
    }
    
    .card-holder {
        grid-template-columns: repeat(2, 1fr);
        align-items: stretch;
    }
    
    div.sidebar {
        transition: none;
    }
    
    h3 {
        font-size: 2rem;
    }
    
    div.project {
        gap: 1em;
    }
}

@media (min-width: 992px) {
    main {
        width: 80%;
        margin: 0 auto;
    }
    
    div.link-btn-div {
        display: flex;
        justify-content: center;
    }
    
    section.page {
        text-align: center;
        margin: 0 auto;
    }
    
    div.project {
        text-align: left;
    }
    
    ul {
        text-align: left;
    }
}


@media (min-width: 1200px) {
    .card-holder {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 1.5em;
    }    
    
    section.title {
        margin-top: 2em;
    }
    
    h4 {
        font-size: 1.4rem;    
    }
    
    section {
        margin: 2em 0;
    }
}

